# school_management_system

./: .air.toml  .cliffignore  .env  .env_example  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  Makefile  NOTES.md  NOTES.txt  README.md  cliff.toml  database_design.md  deployment.md  design.md  development.md  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  sqlc.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml  deploy.yml  playwright.yml  test.yml
backend/: .coverage  README.md  tests-start.sh
backend/app/: .env  crud.py  models.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.tsx
cmd/api/: main.go
cmd/app/: main.go
cmd/web/: base.templ  dashboard.templ  efs.go  home.templ  login.templ  logout.templ  models.go  not_found.templ  register.templ
frontend/: .gitignore  README.md  biome.json  custom-types.d.ts  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  NOTE.md  NOTES.md  index.tsx  styles.css
frontend/tests/: auth.setup.ts  login.spec.ts  users.spec.ts
internal/cache/: cache.go  cache_test.go
internal/database/: academic_year.sql.go  assignments.sql.go  class_promotions.sql.go  class_teachers.sql.go  classes.sql.go  disciplinary.sql.go  fees.sql.go  grades.sql.go  graduates.sql.go  guardians.sql.go  insights.sql.go  models.go  promotion.sql.go  remarks.sql.go  reports.sql.go  sessions.sql.go  settings.sql.go  student_classes.sql.go  (+3 more)
server/: README.md  pyproject.toml
(+233 files in other folders)
